# django-dialogform

./: .gitignore  MANIFEST.in  README.md  README.rst  document.html  document.md  manage.py  pyproject.toml  requirements  requirements.txt  testing_requirements
.github/workflows/: django.yml
dialogform/: __init__.py  apps.py  forms.py  tests.py  views.py
dialogform/demo/: admin.py  apps.py  asgi.py  db.sqlite3  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
dialogform/static/dialogform/css/: dialogform.css  style.css
dialogform/static/dialogform/demo/css/: additional.css  style.css
dialogform/static/dialogform/demo/js/: additional.js  admin_cleanup.js  search.js
dialogform/static/dialogform/js/: dialogform.js  script.js
dialogform/templates/dialogform/: anchor_media.html  dialog.html  form.html  page.html
dialogform/templates/dialogform/demo/: admin_note_change.html  note_form.html  note_list.html  page.html  page_catalog.html
dialogform/templates/dialogform/include/: anchor_media.html  form_table.html
static/dialogform/css/: style.css
static/dialogform/demo/css/: additional.css
static/dialogform/js/: script (original).js
templates/dialogform/: admin_base.html
templates/dialogform/include/: form.html
