[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dialogform.VERSION"}
readme = {file = ["README.rst"]}

[project]
name = "django-dialogform"
version="1.01"
description='Django app to load and open form views within dialog element popups'
readme = "README.rst"
authors = [
  {name = "Zoltan Kemenczy", email = "gugliposta@gmail.com"},
]
requires-python = ">=3.8"
keywords = ["dialog","form"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
  'Development Status :: 4 - Stable',
  'Environment :: Web Environment',
  'Framework :: Django',
  'Framework :: Django :: 6',
  'Framework :: Django :: 5',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: JavaScript',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
dependencies = [
  'django>=5.0',
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/zoltan-ky/django-dialogform"
repository = "https://github.com/zoltan-ky/django-dialogform"
